<resources>
    <string name="app_name">Cricket ScoreKeeper</string>
    <string name="Title">Score Board</string>
    <string name="TeamName1">Team 1</string>
    <string name="TeamOneReduce">-</string>
    <string name="TeamOneScore">0/0</string>
    <string name="TeamOneIncrease">+</string>
    <string name="TeamName2">Team 2</string>
    <string name="TeamTwoReduce">-</string>
    <string name="TeamTwoScore">0/0</string>
    <string name="TeamTwoIncrease">+</string>
    <string name="ScoreOne">1 Run</string>
    <string name="ScoreTwo">2 Runs</string>
    <string name="ScoreThree">3 Runs</string>
    <string name="ScoreFour">4 Runs</string>
    <string name="ScoreFive">6 Runs</string>
    <string name="ScoringOptions">Cricket Scoring Options</string>
    <string name="Wicket">Wicket</string>
    <string name="newGame">New Match</string>
</resources>