<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- Using Scroll view-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <!-- Using vertical linear layout to arrange the elements-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Space from top of the screen-->
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <!-- Title of the app-->
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="34sp"
                tools:text="@string/Title" />

            <!-- Spacing between the title and the team names-->
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <!-- using horizontal linear layouts to arrange teams-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- space from left side of screen-->
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!--Using vertical linear layouts to arrange team name and score and score control-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Team one name-->
                    <TextView
                        android:id="@+id/TeamName1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TeamName1"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        tools:text="@string/TeamName1" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />
                    <!--Using horizontal linear layout to arrange scoring control buttons and score-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!-- Score reduce-->
                        <Button
                            android:id="@+id/TeamOneReduce"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#DD3576C6"
                            android:text="@string/TeamOneReduce"
                            android:textSize="20sp"
                            tools:ignore="DuplicateSpeakableTextCheck"
                            tools:text="@string/TeamOneReduce" />
                        <!-- Space between score reduce button and score of team one-->
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                        <!--Team one score-->
                        <TextView
                            android:id="@+id/TeamOneScore"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/TeamOneScore"
                            android:textAlignment="center"
                            tools:text="@string/TeamOneScore" />
                        <!--space between score of team one and score increase button -->
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                        <!--score increase-->
                        <Button
                            android:id="@+id/TeamTwoIncrease"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#DD3576C6"
                            android:text="@string/TeamOneIncrease"
                            android:textSize="20sp"
                            tools:ignore="DuplicateSpeakableTextCheck"
                            tools:text="@string/TeamOneIncrease" />
                    </LinearLayout>
                </LinearLayout>

                <!--Space between Team one and Team two elements-->
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!--Vertical linear layout to arrange team two name, score controls and score              -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Team two name-->
                    <TextView
                        android:id="@+id/TeamName2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/TeamName2"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        tools:text="@string/TeamName2" />
                    <!--Space between team two name and score control & score-->
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="10dp" />
                    <!--horizontal linear layout to view score and score control buttons-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!--Score reduce-->
                        <Button
                            android:id="@+id/TeamTwoReduce"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:text="@string/TeamTwoReduce"
                            android:textSize="20sp"
                            tools:text="@string/TeamTwoReduce"
                            android:backgroundTint="#DD3576C6"/>
                        <!--space between score reduce button and score-->
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                        <!--score of team two-->
                        <TextView
                            android:id="@+id/TeamTwoScore"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:text="@string/TeamTwoScore"
                            android:textAlignment="center"
                            tools:text="@string/TeamTwoScore" />
                        <!--space between team two score and score increase button-->
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                        <!-- score increase-->
                        <Button
                            android:id="@+id/TeamOneIncrease"
                            android:layout_width="48dp"
                            android:layout_height="wrap_content"
                            android:text="@string/TeamTwoIncrease"
                            android:textSize="20sp"
                            tools:text="@string/TeamTwoIncrease"
                            android:backgroundTint="#DD3576C6"/>
                    </LinearLayout>


                </LinearLayout>

                <!--space to left side of screen-->
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <!--Space between score area and scoring options area-->
            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <!-- scoring options title-->
            <TextView
                android:id="@+id/ScoringOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ScoringOptions"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                tools:text="@string/ScoringOptions" />

            <!-- horizontal linear layout to centre the radio buttons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- space to centre-->
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <!-- scoring options radiobutton group-->
                <RadioGroup
                    android:id="@+id/ScoringOptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <!-- scoring options for cricket are 1,2,3,4 and 6 each radio button is assigned to each score-->
                    <RadioButton
                        android:id="@+id/ScoreOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/ScoreOne"
                        tools:ignore="TextContrastCheck"
                        tools:text="@string/ScoreOne" />

                    <RadioButton
                        android:id="@+id/ScoreTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ScoreTwo"
                        tools:text="@string/ScoreTwo" />

                    <RadioButton
                        android:id="@+id/Score3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ScoreThree"
                        tools:text="@string/ScoreThree" />

                    <RadioButton
                        android:id="@+id/ScoreFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ScoreFour"
                        tools:text="@string/ScoreFour" />

                    <RadioButton
                        android:id="@+id/ScoreFive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ScoreFive"
                        tools:text="@string/ScoreFive" />
                </RadioGroup>
                <!-- Space to centre-->
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>